# EVIT

./: .gitignore  CMakeLists.txt  README.md  build_all.zsh  build_all_debug.zsh  readme.md
cloud/: Sofa_fast.txt
config/: logConfig.conf
example/ROS/src/evit_demo/: CMakeLists.txt
example/ROS/src/evit_demo/config/: board_slow.yaml  desk_fast.yaml  desk_normal.yaml  robot_fast.yaml  robot_normal.yaml  sofa_fast.yaml  sofa_normal.yaml
example/ROS/src/evit_demo/launch/: board_slow.launch  desk_fast.launch  desk_normal.launch  robot_fast.launch  robot_normal.launch  sofa_fast.launch  sofa_normal.launch
example/ROS/src/evit_demo/src/: run_VECtor.cpp  run_vector_new.cpp  write_data.cpp
example/demo/: run_evit.cpp  run_evit2.cpp
example/test/: test_cam.cpp  test_canny.cpp  test_normal.cpp  test_supression.cpp  test_system_read_param.cpp
include/: EventCamera.h  Frame.h  ImuIntegration.h  Optimizer.h  System.h  TimeSurface.h  Type.h  Util.h  Viewer.h
include/CeresFactor/: EventAutoDiffFactor.h  EventFactor.h  ImuFactor.h
include/EigenOptimization/Factor/: GenericFunctor.h  ResidualEventItem.h  ResidualImuItem.h
include/EigenOptimization/Problem/: EventProblem.h  SlidingWindowProblem.h
include/Manifold/: PoseLocalManifold.h  PoseLocalParameterization.h  QuaternionRightManifold.h
include/imageProcessing/: canny.h  distanceField.h  image_processing.h  sobel.h
scripts/: extract_gt.py  plot_event.m  plot_img.m  plot_samples.m  pnp.py  processCloud.py  transform_cloud2.py
src/: EventCamera.cpp  Frame.cpp  ImuIntegration.cpp  Optimzer.cpp  System.cpp  TimeSurface.cpp  Util.cpp  Viewer.cpp
src/CeresFactor/: EventAutoDIff.cpp  EventFactor.cpp  ImuFactor.cpp
src/EigenOptimization/Factor/: ResidualEventItem.cpp  ResidualImuItem.cpp
src/EigenOptimization/Problem/: EventProblem.cpp  SlidingWindowProblem.cpp
src/Manifold/: PoseLocalManifold.cpp  PoseLocalParameterization.cpp  QuaternionRightManifold.cpp
src/imageProcessing/: canny.cpp  distanceField.cpp  image_processing.cpp  sobel.cpp
